[package]
name = "tlslb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
socket2 = "0.5.9"
tls-parser = "0.12.2"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[build-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.50"
clap_mangen = "0.2.26"
