[workspace]
members = [ "ip-database","tls-client-hello-parser", "tls-client-hello-parser/fuzz"]

[package]
name = "tlslb"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Raphael Peters <rappet@rappet.de>"]
repository = "https://github.com/rappet/tlslb"
publish = false

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.37", features = ["derive"] }
futures = "0.3.31"
mimalloc = { version = "0.1.46" }
parking_lot = "0.12.3"
serde = { version = "1.0.219", features = ["derive", "rc"] }
socket2 = "0.5.9"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tls-client-hello-parser = { path = "./tls-client-hello-parser" }
ip-database = { path = "./ip-database" }

[profile.release]
opt-level = 3
codegen-units = 1

[build-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.50"
clap_mangen = "0.2.26"

[dev-dependencies]
assert_cmd = "2.0.17"
criterion = { version = "0.6.0", features = ["html_reports"] }
predicates = "3.1.3"
pretty_assertions = "1.4.1"
