[package]
name = "tls-client-hello-parser-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.tls-client-hello-parser]
path = ".."

[[bin]]
name = "parse_client_hello"
path = "fuzz_targets/parse_client_hello.rs"
test = false
doc = false
bench = false
